fixed homepage spacing

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -13,7 +13,6 @@
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center;
   min-height: 100vh;
   width: 100vw;
 }
@@ -23,6 +22,7 @@
 }
 
 .hero {
+  width: 50%;
   min-width: 40vw;
   min-height: 100vh;
   background-image: linear-gradient(
@@ -40,6 +40,7 @@
 .hero > img {
   width: 75%;
   height: auto;
+  max-width: 545px;
 }
 
 @media screen and (max-width: 768px) {
@@ -49,6 +50,7 @@
       #76dd78 0.82%,
       rgba(118, 221, 120, 0) 112.11%
     );
+    justify-content: center;
   }
   .hero {
     display: none;
